# ValidLightFix

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: XSEPlugin.cmake
src/: PCH.hpp  XSEPlugin.cpp
